nav aside completata [ da fixare l'overflow :( ]

--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ nav .container {
    font-size: 60px;
 }
 .playlist ul {
-   height: 300px;
+   height: calc(65vh - 150px);
    overflow: auto;
 }
 .playlist ul li {
@@ -96,10 +96,30 @@ nav .container {
 /* footer nav  */
 .nav-footer {
    width: 100%;
-   height: 50px;
+   /* padding: 10px 0; */
    position: absolute;
    bottom: 0;
-   background-color: #FFF;
+}
+.nav-footer .top {
+   padding-bottom: 20px;
+   border-bottom: 1px solid #7C7C7C;
+}
+.nav-footer .top i {
+   font-size: 20px;
+}
+.nav-footer .bottom {
+   padding-top: 20px;
+}
+.nav-footer .bottom img {
+   width: 50px;
+   margin-right: 10px;
+   vertical-align: middle;
+   background-color: grey;
+   border-radius: 50%;
+}
+.nav-footer .bottom h3 {
+   color: #FFF;
+   display: inline-block;
 }
 /* CONTENT********* */
 .content {
@@ -114,7 +134,7 @@ nav .container {
    width: 100vw;
    height: 100px;
    padding: 0 20px;
-   position: fixed;
+   position: absolute;
    bottom: 0;
    left: 0;
    background-color: #282828;
